--- a/Pokedex/Pokedex/Views/Pokemon/Detailpokemon.xaml
+++ b/Pokedex/Pokedex/Views/Pokemon/Detailpokemon.xaml
@@ -7,8 +7,8 @@
     <Grid>
         <Grid.Background>
             <LinearGradientBrush StartPoint="1,0">
-                <GradientStop Color="#ff0000" Offset="0.1"/>
-                <GradientStop Color="Black" Offset="0.8"/>
+                <GradientStop Color="Red" Offset="0.1"/>
+                <GradientStop Color="Black" Offset="0.5"/>
             </LinearGradientBrush>
         </Grid.Background>
         <StackLayout Margin="10,0,10,0">
