--- a/Pokedex/Pokedex/Views/Pokemon/Detailpokemon.xaml
+++ b/Pokedex/Pokedex/Views/Pokemon/Detailpokemon.xaml
@@ -8,7 +8,7 @@
         <Grid.Background>
             <LinearGradientBrush StartPoint="1,0">
                 <GradientStop Color="Red" Offset="0.1"/>
-                <GradientStop Color="Black" Offset="0.5"/>
+                <GradientStop Color="Black" Offset="0.6"/>
             </LinearGradientBrush>
         </Grid.Background>
         <StackLayout Margin="10,0,10,0">
@@ -49,10 +49,12 @@
                                TextColor="White"
                                HorizontalOptions="Center"/>
                     </StackLayout>
-                    <StackLayout HorizontalOptions="CenterAndExpand">
+                    <StackLayout HorizontalOptions="CenterAndExpand"
+                                  VerticalOptions="StartAndExpand"
+                                  Margin="0,10,0,0">
                         <StackLayout Orientation="Horizontal"
                                      HorizontalOptions="Center"
-                                     VerticalOptions="CenterAndExpand">
+                                     VerticalOptions="StartAndExpand">
                             <BoxView Color="{Binding mpokemon.Colortipo}"
                                  HeightRequest="30"
                                  WidthRequest="30"
@@ -65,7 +67,8 @@
                         <Label Text="Colors"
                                FontSize="16"
                                TextColor="White"
-                               HorizontalOptions="Center"/>
+                               HorizontalOptions="Center"
+                               />
                     </StackLayout>
                     <StackLayout>
                         <Label Text="{Binding mpokemon.Nroorden}"
@@ -79,6 +82,31 @@
                                HorizontalOptions="Center"/>
                     </StackLayout>
                 </StackLayout>
+                <CollectionView ItemsSource="{Binding mpokemon.Forms}">
+                    <CollectionView.EmptyView>
+                        <DataTemplate>
+                            <Label Text="No other form"
+                                       FontSize="16"
+                                       Margin="0,100,0,0"
+                                       TextColor="White"
+                                       HorizontalOptions="Center"/>
+                        </DataTemplate>
+                    </CollectionView.EmptyView>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout>
+                                <Image Source="{Binding .}" 
+                                       HeightRequest="140"
+                                       VerticalOptions="Center"
+                                       Margin="0,110,0,0"/>
+                                <Label Text="Other form"
+                                       FontSize="16"
+                                       TextColor="White"
+                                       HorizontalOptions="Center"/>
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
             </Grid>
         </StackLayout>
     </Grid>
